[package]
name = "write_upgrade_bytes_contract"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false
rust-version = "1.74.0"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies.soroban-sdk]
version = "=20.3.0"
git = "https://github.com/stellar/rs-soroban-sdk"

[dependencies.soroban-env-common]
version = "=20.2.2"
git = "https://github.com/stellar/rs-soroban-env"

[features]
next = ["soroban-env-common/next"]
